--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -128,3 +128,7 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+/assets/uploads/images/*.jpg
+/assets/uploads/images/*.jpeg
+/assets/uploads/images/*.png
